# now

./: .dockerignore  .env.example  .env.railway  .gitignore  .replit  Dockerfile  Procfile  db.sqlite3  docker-compose.yml  fixtures.json  gunicorn.conf.py  nixpacks.toml  pyproject.toml  railway.json  replit.nix  requirements.txt
apps/accounts/: admin.py  models.py  permissions.py  serializers.py  urls.py  views.py
apps/accounts/migrations/: 0001_initial.py  0002_user_avatar.py  0003_user_bio_user_cover_image.py
apps/contact/: admin.py  models.py  serializers.py  urls.py  views.py
apps/contact/migrations/: 0001_initial.py  0002_message_subject.py  0003_message_reply_message_reply_created_at.py
apps/core/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
apps/core/migrations/: 0001_initial.py
apps/menu/: admin.py  models.py  serializers.py  urls.py  views.py
apps/menu/migrations/: 0001_initial.py  0002_productcomment_user.py
apps/news/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
apps/orders/: admin.py  models.py  serializers.py  urls.py  views.py
config/: settings.py  urls.py
frontend/: about.css  about.html  admin-panel.html  api.js  contact.html  design-system.md  index.html  login.html  menu.html  news.html  product-detail.html  profile.html  register.html
static/frontend/: .gitignore  about.html  admin-panel.html  admin.css  api.js  contact.css  contact.html  globals.css  index.css  index.html  login.html  menu.css  menu.html  news.css  news.html  product-detail.html  profile.html  register.html
(+7 files in other folders)
